# kani

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  404.html  AGENTS.md  ATTRIBUTION.md  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER-GUIDE.md  PR_SUMMARY.md  README.md  STRATA_BACKEND_PR.md  action.yml  application.html  appveyor.yml  benchcomp-cli.html  benchcomp-conf.html  benchcomp-parse.html  bookrunner.html  build-from-source.html  cbmc-hacks.html  cheat-sheets.html  conventions.html  copy_test.rs  debugging-slow-proofs.html  debugging-verification-failures.html  deny.toml  dev-assess.html  dev-documentation.html  faq.html  fast.rs  gen-docs-all.sh  gen-docs.sh  gen-readme.sh  (+47 more)
boogie_ast/: Cargo.toml
boogie_ast/src/: lib.rs
boogie_ast/src/boogie_program/: mod.rs  writer.rs
cprover_bindings/: Cargo.toml
cprover_bindings/src/: cbmc_string.rs  env.rs  lib.rs  machine_model.rs  utils.rs
cprover_bindings/src/goto_program/: builtin.rs  contract.rs  expr.rs  location.rs  mod.rs  stmt.rs  symbol.rs  symbol_table.rs  typ.rs
cprover_bindings/src/irep/: goto_binary_serde.rs  irep.rs  irep_id.rs  mod.rs  serialize.rs  symbol.rs  symbol_table.rs  to_irep.rs
kani-compiler/: Cargo.toml  build.rs
kani-compiler/kani_queries/: Cargo.toml
kani-compiler/kani_queries/src/: lib.rs  unsound_experiments.rs
kani-compiler/src/: args.rs  intrinsics.rs  kani_compiler.rs  main.rs  parser.rs  session.rs
kani-compiler/src/codegen_aeneas_llbc/: compiler_interface.rs  mod.rs
kani-compiler/src/codegen_boogie/: compiler_interface.rs  mod.rs
kani-compiler/src/codegen_cprover_gotoc/: archive.rs  compiler_interface.rs  mod.rs  reachability.rs
kani-compiler/src/codegen_strata/: README.md  compiler_interface.rs  example_complete.rs  mir_to_strata.rs  mod.rs  strata_builder.rs
kani-compiler/src/kani_middle/: abi.rs  analysis.rs  attributes.rs  codegen_order.rs  codegen_units.rs  coercion.rs  contracts.rs  intrinsics.rs  kani_functions.rs  list.rs  metadata.rs  mir_transform.rs  mod.rs  provide.rs  reachability.rs  reachability_smir.rs  resolve.rs
kani-compiler/src/kani_queries/: mod.rs
kani-compiler/src/unsound_experiments/: arg_parser.rs  mod.rs  zero_init.rs
kani-driver/: Cargo.toml  build.rs
kani-driver/src/: args.rs  args_toml.rs  assess.rs  call_cargo.rs  call_cbmc.rs  call_cbmc_viewer.rs  call_display_results.rs  call_goto_cc.rs  call_goto_instrument.rs  call_goto_synthesizer.rs  call_single_file.rs  call_symtab.rs  cbmc_output_parser.rs  cbmc_property_renderer.rs  concrete_playback.rs  exe_trace.rs  exec_trace.rs  get_det_vals.rs  harness_runner.rs  json_handler.rs  list.rs  main.rs  metadata.rs  progress_indicator.rs  project.rs  sarif.rs  session.rs  unsound_experiments.rs  util.rs  version.rs
kani-driver/src/args/: autoharness_args.rs  autoverify_args.rs  cargo.rs  common.rs  coverage_args.rs  list_args.rs  mod.rs  playback_args.rs  std_args.rs  verify_artifacts_args.rs
kani-driver/src/assess/: args.rs  metadata.rs  mod.rs  scan.rs  table_builder.rs  table_failure_reasons.rs  table_promising_tests.rs  table_unsupported_features.rs
kani-driver/src/autoharness/: mod.rs
kani-driver/src/autoverify/: mod.rs
kani-driver/src/concrete_playback/: mod.rs  playback.rs  playback_args.rs  test_generator.rs
kani-driver/src/coverage/: cov_results.rs  cov_session.rs  coverage.rs  mod.rs
kani-driver/src/frontend/: enhance_llm.rs  json_handler.rs  mod.rs  schema_utils.rs
kani-driver/src/list/: collect_metadata.rs  mod.rs  output.rs
kani-mcp-server/: Cargo.toml  README.md  build_output.txt
kani-mcp-server/src/: kani_wrapper.rs  main.rs  mcp_server.rs  parser.rs  tools.rs
kani_metadata/: Cargo.toml
kani_metadata/src/: artifact.rs  cbmc_solver.rs  harness.rs  lib.rs  unstable.rs  vtable.rs
proptest/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  gen-docs.sh  gen-readme.sh  readme-antelogue.md  readme-prologue.md
proptest-derive/: CHANGELOG.md  Cargo.toml  README.md
proptest-derive/benches/: large_enum.rs
proptest-derive/src/: ast.rs  attr.rs  derive.rs  error.rs  interp.rs  lib.rs  tests.rs  use_tracking.rs  util.rs  void.rs
proptest-derive/tests/: assoc.rs  compiletest.rs  enum.rs  filter.rs  misc.rs  no_bound.rs  params.rs  phantom.rs  regex.rs  skip.rs  strategy.rs  struct.rs  uninhabited-pass.rs  units.rs  value.rs  value_param.rs  weight.rs
proptest-derive/tests/compile-fail/: E0001-lifetime.rs  E0002-no-unions.rs  E0003-void-struct.rs  E0004-void-enum.rs  E0005-void-enum.rs  E0006-void-enum.rs  E0007-illegal-strategy.rs  E0008-illegal-skip.rs  E0009-illegal-weight.rs  E0010-parent-has-params.rs  E0011-params-variant.rs  E0012-parent-has-filter.rs  E0014-bare-attr.rs  E0014-no-interp-meta.rs  E0015-lit-set.rs  E0016-immediate-lit.rs  E0017-set-again.rs  E0018-unknown-mod.rs  E0019-no_params-malformed.rs  E0020-skip-malformed.rs  E0021-weight-malformed.rs  E0022-overspec-param.rs  E0023-params-malformed-expr.rs  (+23 more)
proptest/_examples/: config-defaults.rs  dateparser_v1.rs  fib.rs  tutorial-simplify-play.rs
proptest/examples/: config-defaults.rs  dateparser_v1.rs  dateparser_v2.rs  fib.rs  tutorial-simplify-play.rs  tutorial-strategy-play.rs
proptest/proptest-regressions/: .gitignore
proptest/src/: array.rs  bits.rs  bool.rs  char.rs  collection.rs  file-preamble  lib.rs  macros.rs  num.rs  option.rs  prelude.rs  product_frunk.rs  product_tuple.rs  result.rs  sample.rs  std_facade.rs  string.rs  sugar.rs  tuple.rs
proptest/test-persistence-location/: .gitignore  run-tests.bat  run-tests.sh
src/kani-compiler/: Cargo.toml  README.md  build.rs
src/kani-verifier/: Cargo.toml
src/rmc-compiler/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
tools/bookrunner/: Cargo.toml  README.md  print.sh
tools/build-kani/: Cargo.toml  build.rs  license-notes.txt
tools/compile-timer/: Cargo.toml  README.md
tools/compiletest/: Cargo.toml
tools/kani-cov/: Cargo.toml
tools/kani-link-restrictions/: Cargo.toml
tools/scanner/: Cargo.toml  build.rs
(+8548 files in other folders)
