# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani-verifier"
version = "0.1.0"
edition = "2021"
description = "A bit-precise model checker for Rust."
readme = "README.md"
keywords = ["model-checking", "verification"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/model-checking/kani"
documentation = "https://model-checking.github.io/kani/"
homepage = "https://github.com/model-checking/kani"

[dependencies]
anyhow = "1"
home = "0.5"

[[bin]]
name = "kani"
path = "src/bin/kani.rs"

[[bin]]
name = "cargo-kani"
path = "src/bin/cargo_kani.rs"

[profile.release]
strip = "debuginfo"

# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[workspace]
members = [
  "library/kani",
  "library/std",
  "tools/bookrunner",
  "tools/compiletest",
  "tools/make-kani-release",
  "kani-driver",
  "kani-compiler",
  "kani_metadata",
  # `librustdoc` is still needed by bookrunner.
  "tools/bookrunner/librustdoc",
]

exclude = [
  "build",
  "target",
  # dependency tests have their own workspace
  "tests/kani-dependency-test/dependency3",
  # cargo kani tests should also have their own workspace
  "tests/cargo-kani",
]
