# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani-verifier"
version = "0.52.0"
edition = "2021"
description = "A bit-precise model checker for Rust."
readme = "README.md"
keywords = ["model-checking", "verification"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/model-checking/kani"
documentation = "https://model-checking.github.io/kani/"
homepage = "https://github.com/model-checking/kani"
# N.B. Cargo.* is included automatically:
include = ["/src", "/build.rs", "/rust-toolchain.toml", "/LICENSE-*", "/README.md", "/CHANGELOG.md"]

[dependencies]
anyhow = "1"
home = "0.5"
os_info = { version = "3", default-features = false }

[[bin]]
name = "kani"
path = "src/bin/kani.rs"

[[bin]]
name = "cargo-kani"
path = "src/bin/cargo_kani.rs"

[profile.release]
strip = "debuginfo"

# Below is the workspace (vs above is "kani-verifier" crate) config:

[workspace]
members = [
  "library/kani_core",
  "library/kani",
  "library/std",
  "tools/compiletest",
  "tools/build-kani",
  "kani-driver",
  "kani-compiler",
  "kani_metadata",
  "library/kani_core",
]

# This indicates what package to e.g. build with 'cargo build' without --workspace
default-members = [
  ".",
  "kani-driver",
  "kani-compiler",
]

exclude = [
  "build",
  "target",
  # dependency tests have their own workspace
  "tests/kani-dependency-test/dependency3",
  # cargo kani tests should also have their own workspace
  "tests/cargo-kani",
  "tests/perf",
  "tests/cargo-ui",
  "tests/slow",
  "tests/std-checks",
  "tests/assess-scan-test-scaffold",
  "tests/script-based-pre",
  "tests/script-based-pre/build-cache-bin/target/new_dep",
  "tests/script-based-pre/build-cache-dirty/target/new_dep",
  "tests/script-based-pre/verify_std_cmd/tmp_dir/target/kani_verify_std",
]
