# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "cprover_bindings"
version = "0.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
test = true
doctest = false

[dependencies]
lazy_static = "1.5.0"
num = "0.4.0"
num-traits = "0.2"
serde = {version = "1", features = ["derive"]}
string-interner = "0.19"
tracing = "0.1"
linear-map = {version = "1.2", features = ["serde_impl"]}
fxhash = "0.2.1"
bumpalo = { version = "3", features = ["allocator_api"] }
hashbrown = { version = "0.15.4", features = ["nightly"], default-features = false }

[dev-dependencies]
serde_test = "1"
memuse = "0.2.1"

[lints]
workspace = true
