# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani-compiler"
version = "0.28.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
atty = "0.2.14"
cbmc = { path = "../cprover_bindings", package = "cprover_bindings", optional = true }
clap = { version = "4.1.3", features = ["cargo"] }
home = "0.5"
itertools = "0.10"
kani_queries = {path = "kani_queries"}
kani_metadata = {path = "../kani_metadata"}
lazy_static = "1.4.0"
libc = { version = "0.2", optional = true }
num = { version = "0.4.0", optional = true }
object = { version = "0.30.0", default-features = false, features = ["std", "read_core", "write", "archive", "coff", "elf", "macho", "pe"], optional = true }
regex = "1.7.0"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
strum = {version = "0.24.0", optional = true}
strum_macros = {version = "0.24.0", optional = true}
shell-words = "1.0.0"
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
tracing-subscriber = {version = "0.3.8", features = ["env-filter", "json", "fmt"]}
tracing-tree = "0.2.2"

# Future proofing: enable backend dependencies using feature.
[features]
default = ['cprover']
cprover = ['cbmc', 'libc', 'num', 'object', 'serde',
    'serde_json', "strum", "strum_macros"]
write_json_symtab = []

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true
