# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani-compiler"
version = "0.34.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cbmc = { path = "../cprover_bindings", package = "cprover_bindings", optional = true }
clap = { version = "4.1.3", features = ["cargo"] }
home = "0.5"
itertools = "0.11"
kani_metadata = {path = "../kani_metadata"}
lazy_static = "1.4.0"
num = { version = "0.4.0", optional = true }
regex = "1.7.0"
serde = { version = "1", optional = true }
serde_json = "1"
strum = "0.25.0"
strum_macros = "0.25.2"
shell-words = "1.0.0"
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
tracing-subscriber = {version = "0.3.8", features = ["env-filter", "json", "fmt"]}

# Future proofing: enable backend dependencies using feature.
[features]
default = ['cprover']
cprover = ['cbmc', 'num', 'serde']
write_json_symtab = []

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true
