# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani-driver"
version = "0.27.0"
edition = "2021"
description = "Build a project with Kani and run all proof harnesses"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/model-checking/kani"
repository = "https://github.com/model-checking/kani"
publish = false

[dependencies]
kani_metadata = { path = "../kani_metadata" }
cargo_metadata = "0.15.0"
anyhow = "1"
atty = "0.2.14"
console = "0.15.1"
once_cell = "1.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.1.3", features = ["derive"] }
glob = "0.3"
toml = "0.7"
regex = "1.6"
rustc-demangle = "0.1.21"
pathdiff = "0.2.1"
rayon = "1.5.3"
comfy-table = "6.0.0"
strum = {version = "0.24.0"}
strum_macros = {version = "0.24.0"}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
tracing-subscriber = {version = "0.3.8", features = ["env-filter", "json", "fmt"]}
tracing-tree = "0.2.2"
rand = "0.8"
which = "4.4.0"

# A good set of suggested dependencies can be found in rustup:
# https://github.com/rust-lang/rustup/blob/master/Cargo.toml
# Here are a few notes I'm keeping after looking through these

# string similarity, might be useful in suggesting fixes in 'cargo kani mispeled_harness'
# strsim = "0.10"

# open a file (or url presumably?) with platform application for that file type
# opener = "0.5.0"

# threadpool or rayon

# neat: embed git commit/tag info
# git-testament = "0.1.4"

# Decompress a stream. then parse it as tar file
# flate2 = "1"
# tar = "0.4.26"
# sha2 = "0.9"

# color output on terminal
# term = "=0.5.1"

# terminal progress indicator
# https://github.com/console-rs/indicatif
