# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani-driver"
version = "0.67.0"
edition = "2024"
description = "Build a project with Kani and run all proof harnesses"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/model-checking/kani"
repository = "https://github.com/model-checking/kani"
publish = false

[dependencies]
kani_metadata = { path = "../kani_metadata" }
cargo_metadata = "0.23"
anyhow = "1"
console = "0.16"
once_cell = "1.19.0"
to_markdown_table = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4.4.11", features = ["derive"] }
toml = "0.9"
regex = "1.11.1"
rustc-demangle = "0.1.21"
pathdiff = "0.2.1"
rayon = "1.5.3"
comfy-table = "7.0.1"
strum = {version = "0.27.1"}
strum_macros = {version = "0.27.1"}
tempfile = "3"
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "json", "fmt"]}
which = "8"
time = {version = "0.3.47", features = ["formatting"]}
tokio = { version = "1.40.0", features = ["io-util", "process", "rt", "time"] }
chrono = { version = "0.4.41", default-features = false, features = [ "clock" ]}


# A good set of suggested dependencies can be found in rustup:
# https://github.com/rust-lang/rustup/blob/master/Cargo.toml
# Here are a few notes I'm keeping after looking through these

# string similarity, might be useful in suggesting fixes in 'cargo kani mispeled_harness'
# strsim = "0.10"

# open a file (or url presumably?) with platform application for that file type
# opener = "0.5.0"

# threadpool or rayon

# neat: embed git commit/tag info
# git-testament = "0.1.4"

# Decompress a stream. then parse it as tar file
# flate2 = "1"
# tar = "0.4.26"
# sha2 = "0.9"

# color output on terminal
# term = "=0.5.1"

# terminal progress indicator
# https://github.com/console-rs/indicatif
