[package]
name = "kani-mcp-server"
version = "0.1.0"
edition = "2024"
description = "Model Context Protocol server for Kani Rust Verifier - enables AI assistants like Amazon Q to run formal verification"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"

[lints]
workspace = true