# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani_metadata"
version = "0.49.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
cbmc = { path = "../cprover_bindings", package = "cprover_bindings" }
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.4.11", features = ["derive"] }
