# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani_metadata"
version = "0.64.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
cbmc = { path = "../cprover_bindings", package = "cprover_bindings" }
strum = "0.27.1"
strum_macros = "0.27.1"
clap = { version = "4.4.11", features = ["derive"] }

[lints]
workspace = true
