[package]
name = "proptest"
version = "0.9.1"
authors = ["Jason Lingle"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/altsysrq/proptest"
homepage = "https://altsysrq.github.io/proptest-book/proptest/index.html"
documentation = "https://altsysrq.github.io/rustdoc/proptest/0.9.1/proptest/"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]
edition = "2018"

description = """
Hypothesis-like property-based testing and shrinking.
"""

[badges]
travis-ci = { repository = "AltSysrq/proptest" }

[badges.appveyor]
repository = "AltSysrq/proptest"
branch = "master"
service = "github"

[features]

default = ["std", "fork", "timeout", "bit-set", "break-dead-code"]
# Everything in `default` that doesn't break code coverage builds
default-code-coverage = ["std", "fork", "timeout", "bit-set"]

# Enables unstable features of Rust.
unstable = []

# Enables the use of standard-library dependent features
std = ["rand/std", "byteorder/std", "lazy_static",
       "quick-error", "regex-syntax", "num-traits/std"]

# For use in no_std environments with access to an allocator
#alloc = ["hashmap_core"]
alloc = []

# Enables use of the "fork" feature.
#
# Requires std.
fork = ["std", "rusty-fork", "tempfile"]

# Enables use of the "timeout" feature.
#
# Requires the "fork" feature.
timeout = ["fork", "rusty-fork/timeout"]

# Enables support for 64-bit atomic integers.
# This is enabled by default. Some no_std environments do not support it and
# need it excluded, however.
atomic64bit = []

# Include features which break the Rust compiler when `-C link-dead-code` is
# passed (see https://github.com/AltSysrq/proptest/issues/124).
break-dead-code = []

[dependencies]
bitflags = "1.0.1"

# [dependencies.hashmap_core]
# version = "0.1.5"
# optional = true

[dependencies.lazy_static]
version = "1.2"
optional = true

[dependencies.num-traits]
version = "0.2.2"
default-features = false

[dependencies.quick-error]
version = "1.2.1"
optional = true

[dependencies.regex-syntax]
# If you change this, make sure to also bump the `regex` dependency to a
# version that also uses this version of regex-syntax.
version = "0.6.0"
optional = true

[dependencies.bit-set]
version = "0.5.0"
# It doesn't currently work with no_std
# default-features = false
optional = true

[dependencies.rand]
version = "0.6"
default-features = false
features = ["alloc", "i128_support"]

[dependencies.rand_xorshift]
version = "0.1"

[dependencies.rand_chacha]
version = "0.1"

[dependencies.byteorder]
version = "1.2.3"
default-features = false

[dependencies.rusty-fork]
version = "0.2.1"
optional = true
default-features = false

[dependencies.tempfile]
version = "3.0"
optional = true

[dev-dependencies]
regex = "1.0"
