# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani_queries"
version = "0.25.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
unsound_experiments = []

[dependencies]
tracing = {version = "0.1"}
strum = {version = "0.24.0"}
strum_macros = {version = "0.24.0"}
