# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "rmc_compiler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33.0"
tracing = "0.1"
rustc_codegen_rmc = {path = "rustc_codegen_rmc"}

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true
