# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "bookrunner"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
Inflector = "0.11.4"
pulldown-cmark = { version = "0.10", default-features = false }
rustdoc = { path = "librustdoc" }
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true
