# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "build-kani"
version = "0.54.0"
edition = "2021"
description = "Builds Kani, Sysroot and release bundle."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
cargo_metadata = "0.18.0"
clap = { version = "4.4.11", features=["derive"] }
which = "6"
