# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "build-kani"
version = "0.66.0"
edition = "2024"
description = "Builds Kani, Sysroot and release bundle."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
built = "0.8"
cargo_metadata = "0.23"
clap = { version = "4.4.11", features=["derive"] }
which = "8"

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
