# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "compile-timer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

[[bin]]
name = "compile-timer"
path = "src/compile-timer.rs"

[[bin]]
name = "compile-analyzer"
path = "src/compile-analyzer.rs"

[lints]
workspace = true