# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "rustc_codegen_kani"
version = "0.0.0"
edition = "2018"

[lib]
test = true
doctest = false

[dependencies]
bitflags = "1.0"
cbmc = { path = "../../../cprover_bindings", package = "cprover_bindings" }
cstr = "0.2"
libc = "0.2"
measureme = "9.1.0"
num = "0.4.0"
serde = "1"
serde_json = "1"
snap = "1"
tracing = "0.1"
kani_queries = { path = "../kani_queries" }
kani_restrictions = { path = "../../../library/kani_restrictions" }
rustc-demangle = "0.1.21"
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }

[package.metadata.rust-analyzer]
rustc_private=true
