# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "dashboard"
version = "0.1.0"
edition = "2018"

[dependencies]
Inflector = "0.11.4"
pulldown-cmark = { version = "0.8.0", default-features = false }
rustdoc = { path = "../../librustdoc" }
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
