# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "rmc-link-restrictions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_data_structures = { path = "../../../compiler/rustc_data_structures" }
rmc_restrictions = { path = "../../../library/rmc_restrictions" }
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
